Add ereferral endpoint to no csrf urls (auth done within the endpoint)

--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -14,7 +14,7 @@ imed.portal.pages.urls.cleanup=/cleanup,/cleanup/**,/cleanuprest,/cleanuprest/**
 imed.portal.pages.urls.editor=/editor,/editor/**,/editorrest,/editorrest/**
 #swagger related urls to skip security check
 imed.portal.pages.urls.anon.swagger=/swagger*,/swagger**/*.*,/swagger-resources/**,/webjars/*,/webjars/springfox-swagger-ui/**,/v2/api-docs 
-imed.portal.pages.rest.methods.nocsrf=/imedvisage/v1/token,/imedvisage/v1/refreshtoken,/imedvisage/v1/preferences,/imedvisage/v1/hospitalPreferences,/imedvisage/v1/user/checkEmail,/imedvisage/v1/user/details,/imedvisage/v1/user/password,/imedvisage/v1/mobileWarning,/imedvisage/v1/reportNotify/register,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply,/api/v2/**
+imed.portal.pages.rest.methods.nocsrf=/imedvisage/v1/token,/imedvisage/v1/refreshtoken,/imedvisage/v1/preferences,/imedvisage/v1/hospitalPreferences,/imedvisage/v1/user/checkEmail,/imedvisage/v1/user/details,/imedvisage/v1/user/password,/imedvisage/v1/mobileWarning,/imedvisage/v1/reportNotify/register,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply,/api/v2/**,/electronicreferralrest/**
 imed.portal.sare.base.url=https://i-med.com.au/quick-report?imsec=
 
 imed.portal.auth.groups.admin=York St Corporate Office,Referrer Support Team,USR-ReferalPortal_Admin
